--- a/examples/ssl-factory/build.xml
+++ b/examples/ssl-factory/build.xml
@@ -51,6 +51,7 @@
 		</fileset>
 		<path refid="build.classpath"/>
 		<path location="${build.dir}/${final.name}.jar"/>
+		<pathelement location="${build.classes}"/>
 		<pathelement location="${test.build.classes}"/>
 		<pathelement location="${test.build.conf}"/>
 	</path>
@@ -73,7 +74,7 @@
 		</jar>
 	</target>
 
-	<target name="buildTests" depends="init">
+	<target name="buildTests" depends="build">
 		<deltree dir="${test.build.dir}/conf"/>
 		<copydir src="test/conf" dest="${test.build.dir}/conf"/>
 		<javac destdir="${test.build.classes}" debug="true" includeantruntime="false">
