Hidden review feedback (thanks github...)

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1035,6 +1035,8 @@ slow_query_log_timeout_in_ms: 500
 # enable_denylist_range_reads = true;
 
 # The interval at which keys in the cache for denylisting will "expire" and async refresh from the backing DB.
+# Note: this serves only as a fail-safe, as the usage pattern is expected to be "mutate state, refresh cache" on any
+# changes to the underlying denylist entries. See documentation for details.
 # denylist_refresh_seconds = 86400;
 
 # In the event of errors on attempting to load the denylist cache, retry on this interval.
