--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
 jobs:
   j11_build:
     docker:
@@ -4451,6 +4450,42 @@ jobs:
     working_directory: ~/
 version: 2
 workflows:
+  java11_tests:
+    jobs:
+    - j11_build: {}
+    - j11_unit_tests:
+        requires:
+        - j11_build
+    - j11_jvm_dtests:
+        requires:
+        - j11_build
+    - j11_cqlshlib_tests:
+        requires:
+        - j11_build
+    - j11_dtests-with-vnodes:
+        requires:
+        - j11_build
+    - j11_dtests-no-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+        - j11_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+        - j11_build
   java8_tests:
     jobs:
     - j8_build: {}
@@ -4461,6 +4496,9 @@ workflows:
         requires:
         - j8_build
     - j8_cqlshlib_tests:
+        requires:
+        - j8_build
+    - j11_unit_tests:
         requires:
         - j8_build
     - start_utests_long:
@@ -4502,6 +4540,12 @@ workflows:
     - j8_dtests-no-vnodes:
         requires:
         - j8_build
+    - j11_dtests-with-vnodes:
+        requires:
+        - j8_build
+    - j11_dtests-no-vnodes:
+        requires:
+        - j8_build
     - j8_upgradetests-no-vnodes:
         requires:
         - j8_build
@@ -4523,5 +4567,22 @@ workflows:
     - j8_cqlsh-dtests-py38-no-vnodes:
         requires:
         - j8_build
+    - j11_cqlsh-dtests-py2-with-vnodes:
+        requires:
+        - j8_build
+    - j11_cqlsh-dtests-py3-with-vnodes:
+        requires:
+        - j8_build
+    - j11_cqlsh-dtests-py38-with-vnodes:
+        requires:
+        - j8_build
+    - j11_cqlsh-dtests-py2-no-vnodes:
+        requires:
+        - j8_build
+    - j11_cqlsh-dtests-py3-no-vnodes:
+        requires:
+        - j8_build
+    - j11_cqlsh-dtests-py38-no-vnodes:
+        requires:
+        - j8_build
   version: 2
-
