--- a/test/conf/cassandra-murmur.yaml
+++ b/test/conf/cassandra-murmur.yaml
@@ -5,7 +5,7 @@
 cluster_name: Test Cluster
 memtable_allocation_type: heap_buffers
 commitlog_sync: batch
-commitlog_segment_size_in_mb: 5
+commitlog_segment_size: 5mb
 commitlog_directory: build/test/cassandra/commitlog
 cdc_raw_directory: build/test/cassandra/cdc_raw
 cdc_enabled: false
@@ -15,7 +15,7 @@ listen_address: 127.0.0.1
 storage_port: 7012
 start_native_transport: true
 native_transport_port: 9042
-column_index_size_in_kb: 4
+column_index_size: 4kb
 saved_caches_directory: build/test/cassandra/saved_caches
 data_file_directories:
     - build/test/cassandra/data
@@ -34,10 +34,10 @@ server_encryption_options:
     truststore_password: cassandra
 incremental_backups: true
 concurrent_compactors: 4
-compaction_throughput_mb_per_sec: 0
+compaction_throughput: 0mib/s
 row_cache_class_name: org.apache.cassandra.cache.OHCProvider
-row_cache_size_in_mb: 16
-enable_user_defined_functions: true
-enable_scripted_user_defined_functions: true
-enable_sasi_indexes: true
-enable_materialized_views: true
+row_cache_size: 16mb
+user_defined_functions_enabled: true
+scripted_user_defined_functions_enabled: true
+sasi_indexes_enabled: true
+materialized_views_enabled: true
