--- a/test/conf/cassandra-seeds.yaml
+++ b/test/conf/cassandra-seeds.yaml
@@ -35,7 +35,7 @@ server_encryption_options:
     truststore_password: cassandra
 incremental_backups: true
 concurrent_compactors: 4
-compaction_throughput: 0mbps
+compaction_throughput: 0mib/s
 row_cache_class_name: org.apache.cassandra.cache.OHCProvider
 row_cache_size: 16mb
 user_defined_functions_enabled: true
